# prefect-webhook

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
prefect_webhook/: main.py
